<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_less"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_weight="1"
        android:text="@string/numberPickerDecrease"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:inputType="number"
        android:text="@string/numberPicker0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_more"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:text="@string/numberPickerIncrease"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>