<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="140dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dp"
    android:background="@drawable/layout_rounded">

    <ImageView
        android:id="@+id/myProductImageView"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="30dp"
        android:src="@drawable/bec_philips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/boughtQuantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tvMyProductName"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/lightBulb"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tvMyProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/priceForLightBulb"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyProductName">

    </TextView>


    <ImageView
        android:id="@+id/checkBoxImageView"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_baseline_check_circle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
