<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeScreen">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarUser"
            layout="@layout/toolbar" />


        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarUser">

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/layout_rounded">

                <ImageView
                    android:id="@+id/enterProducts"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/enter" />

                <TextView
                    android:id="@+id/tvPrDescription"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="15dp"
                    android:paddingBottom="40dp"
                    android:text="@string/productsDescription"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="95dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    app:srcCompat="@drawable/electric_appliance" />

                <TextView
                    android:id="@+id/tvProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:text="@string/products"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_rounded">

                <TextView
                    android:id="@+id/tvReports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:text="@string/reports"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/enterReports"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/enter" />

                <ImageView
                    android:id="@+id/reportsImage"
                    android:layout_width="95dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    app:srcCompat="@drawable/raport_imagine" />

                <TextView
                    android:id="@+id/tvReDescription"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="15dp"
                    android:paddingBottom="40dp"
                    android:text="@string/reportsDescription"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_rounded">

                <TextView
                    android:id="@+id/tvGraphs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:text="@string/graphs"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/enterGraphs"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/enter" />

                <ImageView
                    android:id="@+id/graphsImage"
                    android:layout_width="95dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    app:srcCompat="@drawable/energy_consumption" />

                <TextView
                    android:id="@+id/tvGrDescription"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="15dp"
                    android:paddingBottom="20dp"
                    android:text="@string/graphsDescription"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/layout_rounded">

                <TextView
                    android:id="@+id/tvDataAnalysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:text="@string/dataAnalysis"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/enterForecasts"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/enter" />

                <ImageView
                    android:id="@+id/dataAnalysisImage"
                    android:layout_width="95dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    app:srcCompat="@drawable/machine_learning" />

                <TextView
                    android:id="@+id/tvDataDescription"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="15dp"
                    android:paddingBottom="40dp"
                    android:text="@string/dataAnDescription"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>